--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
